package mailapi_test

import (
	"context"
	"strings"
	"testing"
	"time"

	sqlc "github.com/ludusrusso/kannon/internal/db"
	"github.com/stretchr/testify/assert"
	"google.golang.org/protobuf/types/known/timestamppb"

	mailerv1 "github.com/ludusrusso/kannon/proto/kannon/mailer/apiv1"
	types "github.com/ludusrusso/kannon/proto/kannon/mailer/types"
)

func TestInsertMail(t *testing.T) {
	defer cleanDB(t)

	d := createTestDomain(t)

	ctx := getDomainCtx(d)

	schedTime := time.Now().Add(10 * time.Minute).Truncate(1 * time.Second)

	res, err := ts.SendHTML(ctx, &mailerv1.SendHTMLReq{
		Sender: &types.Sender{
			Email: "test@test.com",
			Alias: "Test",
		},
		Recipients: []*types.Recipient{
			{
				Email: "test@email.com",
				Fields: map[string]string{
					"name": "Test",
				},
			},
		},
		Subject:       "Test",
		Html:          "Hello {{ name }}",
		ScheduledTime: timestamppb.New(schedTime),
	})

	assert.Nil(t, err)
	assert.NotEmpty(t, res.MessageId)
	assert.NotEmpty(t, res.TemplateId)
	assert.True(t, strings.HasSuffix(res.MessageId, "@"+d.Domain))
	assert.True(t, strings.HasSuffix(res.TemplateId, "@"+d.Domain))

	sp, err := q.GetSendingPoolsEmails(context.Background(), sqlc.GetSendingPoolsEmailsParams{
		MessageID: res.MessageId,
		Limit:     100,
		Offset:    0,
	})
	assert.Nil(t, err)
	assert.Equal(t, 1, len(sp))
	assert.Equal(t, "test@email.com", sp[0].Email)
	assert.Equal(t, sqlc.SendingPoolStatusToValidate, sp[0].Status)
	assert.Equal(t, "Test", sp[0].Fields["name"])

	assert.Equal(t, schedTime.UTC(), sp[0].ScheduledTime.Time.UTC())
}

func TestSendMailWithGlobalFields(t *testing.T) {
	defer cleanDB(t)

	d := createTestDomain(t)

	ctx := getDomainCtx(d)

	schedTime := time.Now().Add(10 * time.Minute).Truncate(1 * time.Second)

	res, err := ts.SendHTML(ctx, &mailerv1.SendHTMLReq{
		Sender: &types.Sender{
			Email: "test@test.com",
			Alias: "Test",
		},
		Subject:       "Test",
		Html:          "Hello {{ name }}",
		ScheduledTime: timestamppb.New(schedTime),
		GlobalFields: map[string]string{
			"name": "Global",
		},
	})

	assert.Nil(t, err)
	assert.NotEmpty(t, res.MessageId)
	assert.NotEmpty(t, res.TemplateId)

	template, err := q.GetTemplate(context.Background(), res.TemplateId)
	assert.NoError(t, err)
	assert.Equal(t, "Hello Global", template.Html)
}

func TestSendTemplateWithGlobalFields(t *testing.T) {
	defer cleanDB(t)

	d := createTestDomain(t)

	ctx := getDomainCtx(d)

	schedTime := time.Now().Add(10 * time.Minute).Truncate(1 * time.Second)

	tmp, err := q.CreateTemplate(context.Background(), sqlc.CreateTemplateParams{
		Html:       "Hello {{ name }}",
		TemplateID: "test-template",
		Title:      "Test",
		Domain:     d.Domain,
		Type:       sqlc.TemplateTypeTemplate,
	})
	assert.NoError(t, err)

	res, err := ts.SendTemplate(ctx, &mailerv1.SendTemplateReq{
		Sender: &types.Sender{
			Email: "test@test.com",
			Alias: "Test",
		},
		Subject:       "Test",
		TemplateId:    tmp.TemplateID,
		ScheduledTime: timestamppb.New(schedTime),
		GlobalFields: map[string]string{
			"name": "Global",
		},
	})

	assert.Nil(t, err)
	assert.NotEmpty(t, res.MessageId)
	assert.NotEmpty(t, res.TemplateId)

	template, err := q.GetTemplate(context.Background(), res.TemplateId)
	assert.NoError(t, err)
	assert.NotEqual(t, tmp.ID, template.ID)
	assert.Equal(t, "Hello Global", template.Html)
}
